[package]
name = "adb_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "tokio-macros", "bytes", "macros", "time"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
rand = "0.9.1"
futures = "0.3.30"
